--- a/manifests/db-data-persistentvolumeclaim.yaml
+++ b/manifests/db-data-persistentvolumeclaim.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  creationTimestamp: null
   labels:
-    io.kompose.service: db-data
+    app: mariadb
+    project: teamspeak
   name: db-data
 spec:
   accessModes:
