--- a/manifests/db-deployment.yaml
+++ b/manifests/db-deployment.yaml
@@ -1,29 +1,22 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
-  annotations:
-    kompose.cmd: kompose convert
-    kompose.version: 1.28.0 (c4137012e)
-  creationTimestamp: null
   labels:
-    io.kompose.service: db
+    app: mariadb
+    project: teamspeak
   name: db
 spec:
+  serviceName: mariadb
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: db
-  strategy:
-    type: Recreate
+      app: mariadb
+      project: teamspeak
   template:
     metadata:
-      annotations:
-        kompose.cmd: kompose convert
-        kompose.version: 1.28.0 (c4137012e)
-      creationTimestamp: null
       labels:
-        io.kompose.network/src-default: "true"
-        io.kompose.service: db
+        app: mariadb
+        project: teamspeak
     spec:
       containers:
         - env:
@@ -32,8 +25,11 @@ spec:
             - name: MYSQL_ROOT_PASSWORD
               value: example
           image: mariadb:10.8.3-jammy
-          name: db
-          resources: {}
+          name: mariadb
+          resources:
+            limits:
+              memory: 256Mi
+              cpu: 100m
           volumeMounts:
             - mountPath: /var/lib/mysql
               name: db-data
@@ -42,4 +38,3 @@ spec:
         - name: db-data
           persistentVolumeClaim:
             claimName: db-data
-status: {}
