--- a/manifests/ts-data-persistentvolumeclaim.yaml
+++ b/manifests/ts-data-persistentvolumeclaim.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  creationTimestamp: null
   labels:
-    io.kompose.service: ts-data
+    app: teamspeak
+    project: teamspeak
   name: ts-data
 spec:
   accessModes:
