--- a/manifests/db-deployment.yaml
+++ b/manifests/db-deployment.yaml
@@ -5,6 +5,7 @@ metadata:
     app: mariadb
     project: teamspeak
   name: db
+  namespace: personal
 spec:
   serviceName: mariadb
   replicas: 1
@@ -26,6 +27,8 @@ spec:
               value: example
           image: mariadb:10.8.3-jammy
           name: mariadb
+          ports:
+            - containerPort: 3306
           resources:
             limits:
               memory: 256Mi
@@ -33,8 +36,13 @@ spec:
           volumeMounts:
             - mountPath: /var/lib/mysql
               name: db-data
+            - mountPath: /var/run/mysqld
+              name: db-socket
       restartPolicy: Always
       volumes:
         - name: db-data
-          persistentVolumeClaim:
-            claimName: db-data
+          hostPath:
+            path: /var/lib/mysql
+        - name: db-socket
+          hostPath:
+            path: /var/run/mysqld
