--- a/manifests/teamspeak-service.yaml
+++ b/manifests/teamspeak-service.yaml
@@ -5,7 +5,7 @@ metadata:
     app: teamspeak
     project: teamspeak
   name: teamspeak
-  namespace: personal
+  namespace: teamspeak
 spec:
   ports:
     - name: ts
