--- a/manifests/mariadb.yaml
+++ b/manifests/mariadb.yaml
@@ -1,15 +1,25 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: config.teamspeak.mariadb
+  namespace: teamspeak
+data:
+  UMASK: "0660"
+  UMASK_DIR: "0750"
+
+---
 apiVersion: mariadb.mmontes.io/v1alpha1
 kind: MariaDB
 metadata:
-  name: mariadb
-  namespace: personal
+  name: teamspeak-mariadb
+  namespace: teamspeak
   labels:
     app: mariadb
     project: teamspeak
 spec:
   rootPasswordSecretKeyRef:
-    name: mariadb
-    key: root-password
+    name: root.user.teamspeak.mariadb
+    key: password
 
   image:
     repository: mariadb
@@ -33,7 +43,6 @@ spec:
 
   myCnf: |
     [mysqld]
-    bind-address=0.0.0.0
     default_storage_engine=InnoDB
     binlog_format=row
     innodb_autoinc_lock_mode=2
@@ -53,7 +62,7 @@ spec:
 
   envFrom:
     - configMapRef:
-        name: mariadb
+        name: config.teamspeak.mariadb
 
   podSecurityContext:
     runAsUser: 0
