--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -50,3 +50,11 @@ jobs:
           action: deploy
           manifests: |
             manifests/database
+
+      - uses: Azure/k8s-deploy@v4
+        name: deploy teamspeak server
+        with:
+          namespace: "teamspeak"
+          action: deploy
+          manifests: |
+            manifests/teamspeak
