--- a/manifests/teamspeak/deployment.yaml
+++ b/manifests/teamspeak/deployment.yaml
@@ -19,6 +19,8 @@ spec:
         app: teamspeak
         project: teamspeak
     spec:
+      nodeSelector:
+        kubernetes.io/arch: amd64
       containers:
         - env:
             - name: TS3SERVER_DB_HOST
