feat: add servicemonitor for teamspeak server

--- a/manifests/teamspeak/svc.yaml
+++ b/manifests/teamspeak/svc.yaml
@@ -18,6 +18,9 @@ spec:
     - name: filetransfer
       port: 30033
       targetPort: 30033
+    - name: metrics
+      port: 9189
+      targetPort: 9189
   selector:
     app: teamspeak
     project: teamspeak
