--- a/manifests/database/mariadb.yaml
+++ b/manifests/database/mariadb.yaml
@@ -104,9 +104,9 @@ spec:
           cpu: 300m
           memory: 512Mi
     serviceMonitor:
-      prometheusRelease: k8s
-      interval: 10s
-      scrapeTimeout: 10s
+      prometheusRelease: default
+      interval: 30s
+      scrapeTimeout: 25s
 
   service:
     type: ClusterIP
