--- a/manifests/teamspeak/svc.yaml
+++ b/manifests/teamspeak/svc.yaml
@@ -8,16 +8,19 @@ metadata:
   namespace: teamspeak
 spec:
   ports:
-    - name: ts
+    - name: voice
       port: 9987
       protocol: UDP
       targetPort: 9987
-    - name: tsquery
+    - name: serverquery
       port: 10011
       targetPort: 10011
-    - name: file
+    - name: filetransfer
       port: 30033
       targetPort: 30033
+    - name: metrics
+      port: 9189
+      targetPort: 9189
   selector:
     app: teamspeak
     project: teamspeak
