--- a/manifests/database/teamspeak-grant.yaml
+++ b/manifests/database/teamspeak-grant.yaml
@@ -1,7 +1,7 @@
 apiVersion: mariadb.mmontes.io/v1alpha1
 kind: Grant
 metadata:
-  name: grant
+  name: teamspeak-grant
 spec:
   mariaDbRef:
     name: teamspeak-mariadb
