add metrics port

--- a/manifests/database/mariadb.yaml
+++ b/manifests/database/mariadb.yaml
@@ -103,6 +103,7 @@ spec:
         limits:
           cpu: 300m
           memory: 512Mi
+      port: 9104
     serviceMonitor:
       prometheusRelease: default
       interval: 30s
